# diploydocs

./: .gitignore  package-lock.json
backend/: .env.example  pyproject.toml
backend/app/: config.py  db.py  extract.py  llm.py  main.py  schemas.py  seed.py  vectors.py
backend/app/graphs/: ingest.py  qa.py
backend/app/routes/: chat.py  conflicts.py  embeddings.py  files.py
backend/diploydocs_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: NEXT_STEPS.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: FileTypeIcon.tsx  Layout.tsx  Logo.tsx  StatusBadge.tsx
frontend/src/lib/: api.ts  mockData.ts  types.ts  utils.ts
frontend/src/pages/: Chat.tsx  ComposeDoc.tsx  Conflicts.tsx  EmbeddingMap.tsx  FileDetail.tsx  Library.tsx
