[project]
name = "diploydocs-backend"
version = "0.1.0"
description = "DiployDocs backend — LangGraph-powered internal knowledge tool"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.10",
  "pydantic-settings>=2.6",
  "sqlalchemy>=2.0",
  "python-multipart>=0.0.12",
  "sse-starlette>=2.1",
  "chromadb>=0.5.20",
  "langchain>=0.3",
  "langchain-core>=0.3",
  "langchain-google-genai>=2.0",
  "langgraph>=0.2.50",
  "langsmith>=0.1.140",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
